# llvm-project-cxxjit

./: UPGRADE.md
clang/include/clang-c/: Index.h
clang/include/clang/AST/: ASTContext.h  ASTNodeTraverser.h  Mangle.h  RecursiveASTVisitor.h  Type.h  TypeLoc.h  TypeProperties.td
clang/include/clang/Basic/: Attr.td  AttrDocs.td  CodeGenOptions.h  DiagnosticSemaKinds.td  Features.def  LangOptions.def  LangOptions.h  TypeNodes.td
clang/include/clang/CodeGen/: JIT.h  Tuning.h
clang/include/clang/Driver/: CC1Options.td  Driver.h  Options.td
clang/include/clang/Lex/: Preprocessor.h
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h  ASTWriter.h  TypeBitCodes.def
clang/lib/AST/: ASTContext.cpp  ASTStructuralEquivalence.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  ODRHash.cpp  Type.cpp  TypePrinter.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGCUDANV.cpp  CGDebugInfo.cpp  CGExpr.cpp  CGExprCXX.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.h  CodeGenTypes.cpp  Driver.cpp  Driver.h  ItaniumCXXABI.cpp  JIT.cpp  JIT.h  JITCompiler.h
clang/lib/CodeGen/Tuner/: CodeGenKnobs.h  ConfigIO.h  ConfigMath.h  Debug.h  DecisionTreeYAML.h  GridSearch.cpp  GridSearch.h  Knob.h  KnobDataTypes.h  KnobSet.cpp  KnobSet.h  Knobs.h  LoopKnob.cpp  LoopKnob.h  LoopKnobCreator.cpp  LoopMD.h  LoopTransformTree.cpp  LoopTransformTree.h  LoopTransformTreeApplicator.cpp  LoopTransformTreeCreator.cpp  LoopTransformTreeTraits.h  Math.h  ModifiedSimplexTuner.cpp  ModifiedSimplexTuner.h  ModifiedSimplexTunerCached.cpp  ModifiedSimplexTunerCached.h  Optimizer.cpp  Optimizer.h  Passes.h  Search.cpp  Search.h  SimpleKnobs.h  SimplexTuner.cpp  SimplexTuner.h  StaticOptimizer.cpp  StaticOptimizer.h  TimingHelper.cpp  TimingHelper.h  TransformTreeOptimizer.cpp  TransformTreeOptimizer.h  (+8 more)
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Darwin.cpp  DragonFly.cpp  FreeBSD.cpp  Fuchsia.cpp  Gnu.cpp  MSVC.cpp  MinGW.cpp  Minix.cpp  NetBSD.cpp  Solaris.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Lex/: Pragma.cpp  Preprocessor.cpp
clang/lib/Parse/: CMakeLists.txt  ParseAST.cpp  Parser.cpp
clang/lib/Sema/: Sema.cpp  SemaDeclAttr.cpp  SemaExpr.cpp  SemaLookup.cpp  SemaStmt.cpp  SemaTemplate.cpp  SemaTemplateDeduction.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTWriter.cpp
clang/tools/libclang/: CIndex.cpp  CXType.cpp
llvm/include/llvm/ADT/: Optional.h
llvm/lib/ExecutionEngine/Orc/: ExecutionUtils.cpp
polly/include/polly/: DependenceInfo.h  ScheduleOptimizer.h  ScopInfo.h
polly/include/polly/CodeGen/: IslAst.h
polly/include/polly/Support/: ISLTools.h  ScopHelper.h
polly/lib/Analysis/: DependenceInfo.cpp  ScopBuilder.cpp  ScopInfo.cpp
polly/lib/CodeGen/: IRBuilder.cpp  IslAst.cpp
polly/lib/Support/: GICHelper.cpp  ISLTools.cpp  ScopHelper.cpp
polly/lib/Transform/: ScheduleOptimizer.cpp
polly/test/ScheduleOptimizer/: pattern-matching-based-opts_3.ll
